# routers/router.go
@@ -12,11 +12,6 @@ import (
 
 func init() {
 	ns := beego.NewNamespace("/v1",
-		beego.NSNamespace("/object",
-			beego.NSInclude(
-				&controllers.ObjectController{},
-			),
-		),
 		beego.NSNamespace("/product",
 			beego.NSInclude(
 				&controllers.ProductController{},
